fix: move background position for better logo visibility

--- a/src/BioEngine.BRC.Games/Web/scss/index.scss
+++ b/src/BioEngine.BRC.Games/Web/scss/index.scss
@@ -7,6 +7,7 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 body {
     background: #111 url(https://brc.sitkocdn.ru/storage/kcd2_2-smol-v2.jpg) no-repeat fixed;
     background-size: cover;
+    background-position: bottom;
 
     header {
         nav {
